2012-11-20  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/sh/dl-machine.h (ELF_MACHINE_RUNTIME_FIXUP_PARAMS): New
	macro.

	* sysdeps/unix/sysv/linux/bits/socket.h (struct mmsghdr, recvmmsg)
	(sendmmsg): Move declarations...
	* socket/sys/socket.h: ... here.
	* sysdeps/unix/sysv/linux/recvmmsg.c [!defined __NR_recvmmsg &&
	!defined __NR_socketcall] (recvmmsg): Move ENOSYS stub into and
	include it from...
	* socket/recvmmsg.c: ... this new file.
	* sysdeps/unix/sysv/linux/internal_sendmmsg.S [__ASSUME_SENDMMSG]
	(sendmmsg): Rename to __sendmmsg, create weak alias and make
	definition of __sendmmsg hidden.
	* sysdeps/unix/sysv/linux/sendmmsg.c (sendmmsg): Likewise.
	[!defined __NR_sendmmsg && !defined __NR_socketcall] (sendmmsg):
	Move ENOSYS stub into and include it from...
	* socket/sendmmsg.c: ... this new file.
	* sysdeps/unix/sysv/linux/Makefile [subdir=socket]
	(sysdep_routines): Move recvmmsg and sendmmsg...
	* socket/Makefile (routines): ... here.
	* socket/Versions (GLIBC_2.17): Add recvmmsg and sendmmsg.
	(GLIBC_PRIVATE): Add __sendmmsg.
	* include/sys/socket.h (__sendmmsg): Add declarations.
	* resolv/res_send.c (send_dg): Invoke __sendmmsg instead of
	sendmmsg.

2012-11-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/ldbl-128/s_nearbyintl.c (__nearbyintl): Mark
	variable I1 with __attribute__ ((unused)).
	* sysdeps/ieee754/ldbl-128/s_rintl.c (__rintl): Likewise.

2012-11-19  Joseph Myers  <joseph@codesourcery.com>

	* stdio-common/_itowa.c (_itowa) [BITS_PER_MP_LIMB == 64]: Declare
	DUMMY variables with __attribute__ ((unused)).

	* bits/byteswap.h: Include <bits/types.h>.
	(__bswap_64): Use __uint64_t instead of unsigned long long int.

2012-11-19  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/ptsname.c (ptsname): Change the type of PEERNAME to
	string_t.  Do not manually set errno.
	(__ptsname_r): Change the type of PEERNAME to string_t, and check its