@@ -1,3 +1,7 @@
+2012-11-20  Carlos O'Donell  <carlos_odonell@mentor.com>
+
+	* sysdeps/unix/make-syscalls.sh: Document prefixes.
+
 2012-11-20  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* sysdeps/sh/dl-machine.h (ELF_MACHINE_RUNTIME_FIXUP_PARAMS): New
